--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 /*=============== Imported files ===============*/
-@use "inputs";
-@use "_responsive";
+@import "_inputs";
+@import "_responsive";
 
 /*=================== Normal code ======================*/
 html {
