--- a/styles/main1.css
+++ b/styles/main1.css
@@ -33,12 +33,10 @@ body {
   width: 100%;
   height: 100%;
 }
-
 .inputs-container p {
   margin: 0%;
   margin-bottom: 2%;
 }
-
 .inputs-container > h1 {
   margin-bottom: 0%;
 }
@@ -46,7 +44,12 @@ body {
 /* ============== Top Section (Elements) =========== */
 .title {
   grid-row: 1/2;
-  margin-top: 3%;
+  margin-top: 0%;
+  align-self: center;
+}
+.title > h1 {
+  margin-top: 0%;
+  margin-bottom: 0%;
 }
 .title > button {
   all: unset;
@@ -194,8 +197,8 @@ a {
 }
 
 .two-options-inputs input {
-  height: clamp(20px, 10vh, 40px);
-  width: clamp(20px, 10vh, 30px);
+  height: clamp(20px, 10vh, 25px);
+  width: clamp(20px, 10vh, 25px);
 }
 .two-options-inputs label p {
   margin: 0%;
@@ -368,7 +371,7 @@ object {
   background-color: rgb(20, 55, 82);
 }
 
-/*=================== Media queries =================*/
+/*=========================== Media queries =================================*/
 @media only screen and (min-width: 992px) {
   html {
     height: 120vh;
@@ -380,11 +383,12 @@ object {
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: rgb(244, 236, 236);
   }
 
   .whole-container {
-    height: 80%;
+    height: 70%;
     width: 85vw;
     margin: 10%;
     box-sizing: border-box;
@@ -392,9 +396,11 @@ object {
     grid-template-rows: 1fr;
     /*Style*/
     box-shadow: -4px 4px 6px 0px rgba(0, 0, 0, 0.1);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
-  /*Top*/
+  /*========== Top ========*/
   .inputs-container {
     grid-column: 1/2;
     box-sizing: border-box;
@@ -422,6 +428,7 @@ object {
 
   .title {
     grid-area: header;
+    align-self: center;
   }
 
   .mortgage-amount {
@@ -444,6 +451,11 @@ object {
     padding-left: 5%;
   }
 
+  .mortgage-term > p,
+  .interest-rate > p,
+  .mortgage-amount > p {
+    font-size: 1.3rem;
+  }
   .mortgage-term .side-symbol,
   .interest-rate .side-symbol {
     font-size: 1rem;
@@ -452,11 +464,20 @@ object {
   .mortgage-type {
     grid-area: multiple-option;
   }
-  #calculate-button {
-    grid-area: button;
+  .mortgage-type > p {
+    font-size: 1.2rem;
   }
 
-  /*bottom*/
+  .two-options-inputs label p /*The texts inside the two options: Repayment and Interest Only*/ {
+    font-size: 1rem;
+  }
+
+  #calculate-button {
+    grid-area: button;
+    font-size: 1.5rem;
+  }
+
+  /*=========== bottom =============*/
   .empty-results {
     grid-column: 2;
     grid-row: 1;
@@ -464,8 +485,13 @@ object {
     width: 100%;
     padding-left: 5%;
     padding-right: 5%;
-    border-bottom-left-radius: 80px;
-    border-radius: 10px;
+  }
+  .empty-results,
+  .completed-results {
+    border-bottom-left-radius: 90px;
+  }
+  .empty-results > p {
+    font-size: 1rem;
   }
 
   .completed-results {
@@ -475,7 +501,6 @@ object {
     width: 100%;
     padding-left: 5%;
     padding-right: 5%;
-    border-bottom-left-radius: 80px;
     border-radius: 10px;
   }
   .completed-results h1 {
