--- a/styles/main1.css
+++ b/styles/main1.css
@@ -187,7 +187,7 @@ a {
   align-items: center;
   cursor: pointer;
   /*border*/
-  border: 1.5px solid rgb(7, 161, 7);
+  border: 1.5px solid rgba(0, 0, 0, 0.492);
   border-radius: 4px;
   /*Font-size*/
   font-size: 1.4rem;
@@ -196,11 +196,15 @@ a {
 .two-options-inputs label:focus,
 .two-options-inputs label:hover {
   background-color: bisque;
+  border-color: rgb(246, 156, 82);
 }
 
 .two-options-inputs input {
   height: clamp(20px, 10vh, 25px);
   width: clamp(20px, 10vh, 25px);
+  background-color: lightblue; /* Change the background color */
+  color: darkblue; /* Change the text color */
+  border: 1px solid darkblue; /* Change the border color */
 }
 .two-options-inputs label p {
   margin: 0%;
@@ -229,7 +233,7 @@ a {
   background-color: rgba(200, 188, 15, 0.765);
 }
 
-/*====================== Bottom =====================*/
+/*================================ Bottom ==================================*/
 /*The two results sections*/
 .empty-results,
 .completed-results {
@@ -246,6 +250,7 @@ a {
   /*Color style*/
   background-color: rgb(20, 55, 82);
   color: white;
+  border-bottom-left-radius: 60px;
 }
 
 /*Individual containers*/
@@ -259,7 +264,7 @@ a {
   text-align: center;
 }
 
-/*=============== Completed results =================*/
+/*=========================== Completed results =================================*/
 .completed-results {
   z-index: 0;
   padding-bottom: 5%;
@@ -306,23 +311,26 @@ a {
 .monthly-repayments-container {
   grid-area: monthly-repayments;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
   /*Style*/
   border-bottom: 2px solid rgba(255, 255, 255, 0.179);
 }
 .monthly-repayments-container > h3 {
   height: 35%;
   margin: 0%;
-  padding-top: 5%;
+  padding-top: 8%;
   font-size: 1.5rem;
   box-sizing: border-box;
 }
 .monthly-payments-amount /*The text which holds the number of the result*/ {
   box-sizing: border-box;
   height: 65%;
-  padding-bottom: 10%;
   margin: 0%;
 }
 .monthly-payments-amount > p {
+  box-sizing: border-box;
   margin: 0%;
   color: rgba(255, 255, 0, 0.866);
   font-size: 5rem;
@@ -396,8 +404,8 @@ object {
     grid-template-rows: 1fr;
     /*Style*/
     box-shadow: -4px 4px 6px 0px rgba(0, 0, 0, 0.1);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 10px;
+    background-color: white;
   }
 
   /*========== Top ========*/
@@ -487,7 +495,7 @@ object {
     font-size: 1.5rem;
   }
 
-  /*=========== bottom =============*/
+  /*========================= bottom ============================*/
   .empty-results {
     grid-column: 2;
     grid-row: 1;
@@ -496,14 +504,16 @@ object {
     padding-left: 5%;
     padding-right: 5%;
   }
+
   .empty-results,
   .completed-results {
-    border-bottom-left-radius: 90px;
+    border-bottom-left-radius: 80px;
   }
+
   .empty-results > p {
     font-size: 1.3rem;
   }
-
+  /*============ The compleated results ============*/
   .completed-results {
     grid-column: 2;
     grid-row: 1;
@@ -511,7 +521,6 @@ object {
     width: 100%;
     padding-left: 5%;
     padding-right: 5%;
-    border-radius: 10px;
   }
   .completed-results h1 {
     font-size: 1.5rem;
@@ -524,7 +533,7 @@ object {
     font-size: 1.4rem;
   }
   .monthly-payments-amount > p {
-    text-align: start;
+    font-size: 4rem;
   }
 
   .term-payments-container > h3 {
